[package]
name = "zernike"
version = "0.1.1-alpha.0"
authors = ["Rod Conan <rconan@gmto.org>"]
license = "MIT/Apache-2.0"
description = "Routines to compute the Zernike polynomials"
repository = "https://github.com/rconan/zernike"
documentation = "http://docs.rs/zernike"
keywords = ["Zernike", "polynomials"]
edition = "2018"

[dependencies]
rayon = "1.5.0"

[dev-dependencies]
plotters = "0.3.0"
rand = "0.8.3"
