[package]
name = "zernike"
version = "0.2.1"
authors = ["Rod Conan <rconan@gmto.org>"]
license = "MIT/Apache-2.0"
description = "Routines to compute the Zernike polynomials"
repository = "https://github.com/rconan/zernike"
documentation = "http://docs.rs/zernike"
keywords = ["Zernike", "polynomials"]
edition = "2018"

[dependencies]
rayon = "1.10.0"

[dev-dependencies]
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
plotters = "0.3.6"
rand = "0.8.5"
